one last change to met alt

--- a/Appendices/Methodology_Alt.tex
+++ b/Appendices/Methodology_Alt.tex
@@ -1604,7 +1604,7 @@ Y_{k,a} &=& \gamma_{0} + \gamma_{y} Y_{k,a-1} + \varepsilon_{a}\label{eq:linear1
 \end{enumerate}
 
 \subsection{Inference} \label{appendix:bootstrap}
-\noindent \textbf{[JLG: I'm worked on your requests on this section.]}\\
+\noindent \textbf{[JLG: I worked on your requests on this section.]}\\
 
 \noindent This section provides the precise steps for constructing the bootstrap distribution and for computing the standard errors for three of the main estimates in our paper. \textbf{[JJH: Can we adapt this to the setting I just gave you?] [JLG: Yes. That's what I do in \textbf{Specification 4} and I account for it in the bootstrap.]}
 
