updating IPW tables

--- a/AppOutput/Methodology/nonipw_vars.tex
+++ b/AppOutput/Methodology/nonipw_vars.tex
@@ -4,22 +4,26 @@
 \toprule
 Completely Observed Outcomes	&	Age	\\
 \midrule			
-IQ Standard Score	&	2, 3, 4, 5, 6, 7, 8, 12, 15, 21	\\
+IQ Standard Score	&			2, 3, 3.5, 4, 4.5, 5, 12, 15, 21	\\
 PIAT Math Standard Score	&	7	\\
-Home Total Score	&	0.5, 1.5, 2.5, 3.5, 4.5, 8	\\
-Mother Works	&	2, 3, 4, 5	\\
+Achievement Score & 			15, 21 \\
+HOME Total Score	&			0.5, 1.5, 2.5, 3.5, 4.5	\\
+Mother Works	&				2, 3, 4, 5, 21	\\
 Biological Mother's Education Level	&	2, 3, 4, 5, 9	\\
-Father is Home	&	2, 3, 4, 5	\\
-Ever Adopted	&		NA \\
-Graduated High School	&	NA	\\
+Father is Home	&				2, 3, 4, 5, 8	\\
+Graduated High School	&		NA	\\
 Attended Vocation/Tech/Community College	&	NA	\\
-Earned Degree from 4-year College	&	NA	\\
 Years of Education	&	30	\\
-Works a Job	&	30	\\
-Total Felony Arrests	&	Mid-30s	\\
-Total Misdemeanor Arrests	&	Mid-30s	\\
+Ever Had Special Education 			& NA \\
+Total Number of Special Education 	& NA \\
+Ever Retained						& NA \\
+Total Number of Retention			& NA \\
+Employed	&	30	\\
+Labor Income &  21, 30 \\
+Transfer Income &  30 \\
 Total Years Incarcerated	&	30	\\
 Self-reported Health	&	30	\\
+Brief Symptom Inventory Score & 21 \\
 Number of Cigarettes Smoked Per Day Last Month	&	30	\\
 Number of Days Drank Alcohol Last Month	&	30	\\
 Number of Days Binge Drank Alcohol Last Month	&	30	\\
