--- a/Appendices/Results.tex
+++ b/Appendices/Results.tex
@@ -31,7 +31,7 @@
 
 \noindent We follow the samr procedure to elect the ``matching'' variables for the estimates of ``treatment vs. stay at home'' and ``treatment vs. alternative preschools parameters'' (see Section~\ref{section:methodsquestions}. We analyze sensitivity to the choice of these controls next.
 
-\subsubsection{Sensitivity Analysis}
+\subsubsection{Sensitivity Analysis} \label{app:senscontrols}
 
 \noindent An immediate route of inquiry has to do with the sensitivity of our estimates to the choice of background variables. Especially in the context of our small sample, in which estimates can vary to different model specifications. To investigate this, we estimate treatment effects for the three counterfactuals we consider using all possible control sets for the three variables we can form with the background variables in Table~\ref{tab:pselectvars}. We also consider all possible control sets of one and two variables in Table~\ref{tab:pselectvars}. For brevity, we present this exercise for two outcomes, employment and education. Similar exercises for the 95 main outcomes we consider are available upon request.\\
 
